<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EQ Library</string>

    <string name="nav_my_eqs">My EQs</string>
    <string name="nav_eq_library">EQ Library</string>
    <string name="nav_settings">Settings</string>
    <string name="output_selector_format">%1$s ▾</string>
    <string name="refresh_eq_library_content_description">Refresh EQ Library</string>
...
